--- a/HYNewNest/Features(主代码)/HomeComponent/View/CNMessageBoxView.xib
+++ b/HYNewNest/Features(主代码)/HomeComponent/View/CNMessageBoxView.xib
@@ -13,6 +13,7 @@
                 <outlet property="closeBtn" destination="NBY-xf-oIa" id="cp8-Fq-gAB"/>
                 <outlet property="pageC" destination="MfP-76-EA1" id="YHU-i0-H7Y"/>
                 <outlet property="scrollView" destination="tdn-XT-46o" id="XTC-lb-ETb"/>
+                <outlet property="scrollViewHCons" destination="Nez-mq-2s9" id="TUu-iH-qgc"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -30,8 +31,8 @@
                     <constraints>
                         <constraint firstItem="tdn-XT-46o" firstAttribute="leading" secondItem="jnG-qK-2Na" secondAttribute="leading" constant="16" id="7kY-ho-lfF"/>
                         <constraint firstAttribute="trailing" secondItem="tdn-XT-46o" secondAttribute="trailing" constant="16" id="Cdt-dC-sVg"/>
+                        <constraint firstAttribute="height" constant="459" id="Nez-mq-2s9"/>
                         <constraint firstItem="tdn-XT-46o" firstAttribute="top" secondItem="jnG-qK-2Na" secondAttribute="top" id="O5z-pw-RpA"/>
-                        <constraint firstAttribute="width" secondItem="jnG-qK-2Na" secondAttribute="height" multiplier="375:416" id="Rk4-13-OuW"/>
                         <constraint firstAttribute="bottom" secondItem="tdn-XT-46o" secondAttribute="bottom" id="uwZ-kP-a7f"/>
                     </constraints>
                 </view>
@@ -59,7 +60,7 @@
                 <constraint firstItem="NBY-xf-oIa" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="zEW-0Q-fAN"/>
             </constraints>
             <viewLayoutGuide key="safeArea" id="0bx-rG-ZxG"/>
-            <point key="canvasLocation" x="137.68115942028987" y="152.67857142857142"/>
+            <point key="canvasLocation" x="117" y="-24"/>
         </view>
     </objects>
     <resources>
