--- a/HYNewNest/Features(主代码)/VIPComponent/Controller/HYVIPViewController.xib
+++ b/HYNewNest/Features(主代码)/VIPComponent/Controller/HYVIPViewController.xib
@@ -28,7 +28,7 @@
                 <outlet property="lblNextLevelDeposit" destination="gfV-5u-9we" id="zZY-KZ-Xop"/>
                 <outlet property="lblThisMonthAmount" destination="J80-p6-w6w" id="b3L-wR-1xf"/>
                 <outlet property="lblThisMonthDeposit" destination="U5U-Iu-Rhg" id="dyj-tB-3Ju"/>
-                <outlet property="pageControl" destination="497-AQ-Mjs" id="yWU-YE-3gh"/>
+                <outlet property="pageControl" destination="hSq-uQ-wyB" id="HIy-D5-d3m"/>
                 <outlet property="prgsViewAmount" destination="Mh3-dw-OQt" id="E3W-nX-fzO"/>
                 <outlet property="prgsViewDeposit" destination="UAH-s3-R0T" id="f7h-Em-01d"/>
                 <outlet property="rankStackView" destination="4sR-4D-yS9" id="u9a-tU-Bbq"/>
@@ -533,10 +533,6 @@
                                 <constraint firstAttribute="width" secondItem="GEL-g5-FzK" secondAttribute="height" multiplier="375:23" id="rRp-05-Z9n"/>
                             </constraints>
                         </imageView>
-                        <pageControl opaque="NO" userInteractionEnabled="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" numberOfPages="6" translatesAutoresizingMaskIntoConstraints="NO" id="497-AQ-Mjs">
-                            <rect key="frame" x="22" y="226" width="87" height="37"/>
-                            <color key="currentPageIndicatorTintColor" red="0.97254901960784312" green="0.93333333333333335" blue="0.67450980392156867" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
-                        </pageControl>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="yca-Ns-xyA">
                             <rect key="frame" x="335" y="234.5" width="57" height="20"/>
                             <constraints>
@@ -606,28 +602,36 @@
                                 <action selector="didTapVIPSxh:" destination="-1" eventType="touchUpInside" id="MEP-fS-Jc7"/>
                             </connections>
                         </button>
+                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hSq-uQ-wyB" customClass="TAPageControl">
+                            <rect key="frame" x="22" y="226" width="100" height="37"/>
+                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <constraints>
+                                <constraint firstAttribute="width" constant="100" id="PVv-eE-JgC"/>
+                                <constraint firstAttribute="height" constant="37" id="w6N-Y9-k07"/>
+                            </constraints>
+                        </view>
                     </subviews>
                     <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <constraints>
-                        <constraint firstItem="497-AQ-Mjs" firstAttribute="centerY" secondItem="yca-Ns-xyA" secondAttribute="centerY" id="3qm-FX-emn"/>
                         <constraint firstAttribute="trailing" secondItem="GEL-g5-FzK" secondAttribute="trailing" id="8Oy-Pd-0er"/>
                         <constraint firstAttribute="width" secondItem="H4B-ad-6eD" secondAttribute="height" multiplier="375:252" id="Df5-nk-fAe"/>
                         <constraint firstItem="uTa-yB-Zub" firstAttribute="leading" secondItem="TpE-DX-g5Z" secondAttribute="trailing" constant="5" id="DuG-Ln-vFC"/>
                         <constraint firstItem="uTa-yB-Zub" firstAttribute="centerY" secondItem="yca-Ns-xyA" secondAttribute="centerY" id="EBa-hB-5XS"/>
                         <constraint firstItem="g2w-Lu-VqX" firstAttribute="top" secondItem="IDl-Wg-Rlw" secondAttribute="bottom" constant="5" id="GrJ-Ea-Pqz"/>
                         <constraint firstItem="T1e-fA-4s4" firstAttribute="top" secondItem="GEL-g5-FzK" secondAttribute="bottom" constant="7" id="IHF-yG-cyb"/>
+                        <constraint firstItem="hSq-uQ-wyB" firstAttribute="centerY" secondItem="yca-Ns-xyA" secondAttribute="centerY" id="QE4-6V-NSh"/>
+                        <constraint firstItem="hSq-uQ-wyB" firstAttribute="leading" secondItem="H4B-ad-6eD" secondAttribute="leading" constant="22" id="QbX-ba-phI"/>
                         <constraint firstItem="yca-Ns-xyA" firstAttribute="leading" secondItem="uTa-yB-Zub" secondAttribute="trailing" constant="5" id="RDr-DC-x0K"/>
                         <constraint firstItem="GEL-g5-FzK" firstAttribute="leading" secondItem="H4B-ad-6eD" secondAttribute="leading" id="U84-37-Ahg"/>
-                        <constraint firstItem="497-AQ-Mjs" firstAttribute="leading" secondItem="H4B-ad-6eD" secondAttribute="leading" constant="22" id="VG6-DV-reC"/>
                         <constraint firstAttribute="trailing" secondItem="yca-Ns-xyA" secondAttribute="trailing" constant="22" id="YCx-ql-RJQ"/>
                         <constraint firstItem="TpE-DX-g5Z" firstAttribute="centerY" secondItem="yca-Ns-xyA" secondAttribute="centerY" id="dbk-r8-16l"/>
                         <constraint firstItem="T1e-fA-4s4" firstAttribute="leading" secondItem="H4B-ad-6eD" secondAttribute="leading" constant="22" id="gHO-kR-45T"/>
                         <constraint firstItem="g2w-Lu-VqX" firstAttribute="top" secondItem="T1e-fA-4s4" secondAttribute="bottom" constant="4.5" id="kEV-k6-FiB"/>
                         <constraint firstAttribute="trailing" secondItem="g2w-Lu-VqX" secondAttribute="trailing" id="mNf-kN-g61"/>
                         <constraint firstItem="g2w-Lu-VqX" firstAttribute="leading" secondItem="H4B-ad-6eD" secondAttribute="leading" id="oz8-cJ-tcs"/>
-                        <constraint firstItem="497-AQ-Mjs" firstAttribute="top" secondItem="g2w-Lu-VqX" secondAttribute="bottom" constant="5.5" id="pJl-Nk-v9O"/>
                         <constraint firstAttribute="trailing" secondItem="IDl-Wg-Rlw" secondAttribute="trailing" constant="22" id="vcS-W7-3fe"/>
                         <constraint firstItem="GEL-g5-FzK" firstAttribute="top" secondItem="H4B-ad-6eD" secondAttribute="top" id="xx3-zy-Mue"/>
+                        <constraint firstItem="hSq-uQ-wyB" firstAttribute="top" secondItem="g2w-Lu-VqX" secondAttribute="bottom" constant="5.5" id="zUg-xE-SqA"/>
                     </constraints>
                 </view>
             </subviews>
@@ -642,7 +646,7 @@
                 <constraint firstAttribute="bottom" secondItem="KMA-BO-i4h" secondAttribute="bottom" id="upV-m1-eCA"/>
             </constraints>
             <viewLayoutGuide key="safeArea" id="Q5M-cg-NOt"/>
-            <point key="canvasLocation" x="131.8840579710145" y="115.84821428571428"/>
+            <point key="canvasLocation" x="198.55072463768118" y="137.94642857142856"/>
         </view>
     </objects>
     <resources>
